use picocli for agent launcher options handling